--- a/platforms/android/AndroidManifest.xml
+++ b/platforms/android/AndroidManifest.xml
@@ -59,7 +59,7 @@
         <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default" />
         <meta-data android:name="JPUSH_APPKEY" android:value="6f4b9d81191d8bd3d1864d3d" />
         <service android:exported="false" android:name="com.estimote.sdk.service.BeaconService" />
-        <activity android:name="com.yujin.notification.NotificationShow" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+        <activity android:name="com.yujin.notification.NotificationShow" android:theme="@android:style/Theme.Black.NoTitleBar" />
     </application>
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19" />
     <uses-permission android:name="com.showingcloud.beaconsAndJPush.permission.JPUSH_MESSAGE" />
